syntax = "proto3";

package accessp;

option go_package = "github.com/nikkmidl/rig-api/proto/accesspb";

import "google/api/annotations.proto";

service AccessService {
  rpc ListRepos (ListReposRequest) returns (ListReposResponse) {
    option (google.api.http) = {
      get: "/list/{org_name}"
    };
  }
}

message ListReposRequest {
  string org_name = 1;
}

message RepoAccessInfo {
  string repo_name = 1;
  repeated string allowed_users = 2;
  repeated string blocked_users = 3;
}

message ListReposResponse {
  repeated RepoAccessInfo repos = 1;
}
